Parsons Problem einbinden

--- a/book/parsonsproblems/parsons1find_max.html
+++ b/book/parsonsproblems/parsons1find_max.html
@@ -14,8 +14,8 @@
 </script>
 
 <title>find_max</title>
-<link href="/static/parsons.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.css" />
+<link href="parsons.css" rel="stylesheet" />
+<link rel="stylesheet" href="prettify.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
 </head>
 
@@ -35,8 +35,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
-<script src="/static/parsons.js"></script>
-<script src="/static/lis.js"></script>
+<script src="parsons.js"></script>
+<script src="lis.js"></script>
 <script>
     var initial = atob("ZGVmIGZpbmRfbWF4KHNlcXVlbmNlKToNCiAgICBtYXhfdmFsID0gc2VxdWVuY2VbMF0NCiAgICBmb3IgdmFsIGluIHNlcXVlbmNlWzE6XToNCiAgICAgICAgaWYgdmFsID4gbWF4X3ZhbDoNCiAgICAgICAgICAgIG1heF92YWwgPSB2YWwNCiAgICByZXR1cm4gbWF4X3ZhbA==");
 
