--- a/book/parsonsproblems/parsons1find_max.html
+++ b/book/parsonsproblems/parsons1find_max.html
@@ -21,7 +21,7 @@
 
 
 
-<h1>find_max 2</h1>
+<h1>find_max 3</h1>
 <div id="sortableTrash" class="sortable-code"></div>
 <div id="sortable" class="sortable-code">
 </div>
@@ -35,8 +35,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
-<script src="parsonsproblems/parsons.js"></script>
-<script src="parsonsproblems/lis.js"></script>
+<script src="parsons.js"></script>
+<script src="lis.js"></script>
 <script>
     var initial = atob("ZGVmIGZpbmRfbWF4KHNlcXVlbmNlKToNCiAgICBtYXhfdmFsID0gc2VxdWVuY2VbMF0NCiAgICBmb3IgdmFsIGluIHNlcXVlbmNlWzE6XToNCiAgICAgICAgaWYgdmFsID4gbWF4X3ZhbDoNCiAgICAgICAgICAgIG1heF92YWwgPSB2YWwNCiAgICByZXR1cm4gbWF4X3ZhbA==");
 
