--- a/book/parsonsproblems/parsons1find_max.html
+++ b/book/parsonsproblems/parsons1find_max.html
@@ -14,14 +14,14 @@
 </script>
 
 <title>find_max</title>
-<link href="parsonsproblems/parsons.css" rel="stylesheet" />
-<link rel="stylesheet" href="parsonsproblems/prettify.css" />
+<link href="parsons.css" rel="stylesheet" />
+<link rel="stylesheet" href="prettify.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
 </head>
 
 
 
-<h1>find_max 3</h1>
+<h1>find_max 4</h1>
 <div id="sortableTrash" class="sortable-code"></div>
 <div id="sortable" class="sortable-code">
 </div>
