KI Beispiele Problemlösen hinzugefügt

--- a/book/parsonsproblems/parsons2allgemein.html
+++ b/book/parsonsproblems/parsons2allgemein.html
@@ -21,7 +21,7 @@
 
 
 
-<h1>find_max 10 allgemein</h1>
+<!-- <h1>find_max v10 allgemein</h1> -->
 <!-- <h2 id="urlID">URL</h2>
 <h2 id="codeID">Code</h2>
 <h2 id="decodedID">Decoded</h2> -->
