--- a/book/datenstrukturen/parsonsproblems/parsons2allgemein.html
+++ b/book/datenstrukturen/parsonsproblems/parsons2allgemein.html
@@ -32,7 +32,7 @@
 <div style="clear:both;"></div>
 <p>
     <input id="newInstanceLink" value="Neu beginnen" type="button" />
-    <input id="feedbackLink" value="Feedback bekommen" type="button" />
+    <input id="feedbackLink" value="Überprüfen" type="button" />
 </p>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
